--- a/图像处理/边缘检测/图像梯度.ipynb
+++ b/图像处理/边缘检测/图像梯度.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "![](Sobel.png)"
+    "![](pic/Sobel.png)"
    ],
    "metadata": {
     "collapsed": false
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -25,10 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "img = cv2.imread(\"pic.png\")\n",
+    "img = cv2.imread(\"pic/pic.png\")\n",
     "cv2.imshow(\"pic\",img)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
@@ -39,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7fecd16f5ac8>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x7f15d4967748>"
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# 右减左 下减上\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stderr",
@@ -107,9 +107,9 @@
     },
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7fecd165f940>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x7f15c7f85668>"
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -144,13 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7fecd164a320>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x7f15c7f7d550>"
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -177,13 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7fecd15b4160>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x7f15c7ee8470>"
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -219,13 +219,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7fecd1514b38>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x7f15c7f2f7f0>"
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -259,13 +259,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7fecd1929160>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x7f15c7e2c8d0>"
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -300,13 +300,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7fecd148a780>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x7f15c7d950b8>"
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -322,7 +322,7 @@
     }
    ],
    "source": [
-    "img = cv2.imread(\"car.jpg\")\n",
+    "img = cv2.imread(\"pic/car.jpg\")\n",
     "sobely = cv2.Sobel(img,cv2.CV_64F,0,1,ksize=3)\n",
     "sobely = cv2.convertScaleAbs(sobely)\n",
     "\n",
@@ -339,10 +339,10 @@
    "cell_type": "markdown",
    "source": [
     "### Scharr算子\n",
-    "![](Scharr.png)\n",
+    "![](pic/Scharr.png)\n",
     "#### 相比于Sobel更加明显\n",
     "### Laplacian算子\n",
-    "![](Laplacian.png)"
+    "![](pic/Laplacian.png)"
    ],
    "metadata": {
     "collapsed": false
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [],
    "metadata": {
